--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
 let key = 30367474-891d2377e60b75a54d4c4bed6
+const PHOTOS_URL = `https://pixabay.com/api/?key=30367474-891d2377e60b75a54d4c4bed6&q=yellow+flowers&image_type=photo&pretty=true`
